Self assessment  added
self assessment added

--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -381,7 +381,11 @@ Since she has never worked with web applications before so the execution of this
 
 
 \subsubsection*{Christopher Beine}
-{\color{red} TODO}
+Christopher Beine is a 4th semester Bachelor student at the RWTH Aachen University. Before his studies, he made an apprenticeship as a Computer Science Expert Subject Area: Software Development 
+by Phoenix Contact GmbH \& Co. KG where he works as a full-stack developer. He supervised several software projects within the company and is currently 
+developing a web application for planning and visualizing the strategic orientation. In the field of data science, he deepens his knowledge with online courses such as the "Machine Learning" from Standford University on Coursera. 
+He has practical experience with C\#, PHP, JavaScript, the software development lifecycle and the most common web technologies.    
+
 
 \subsection{Roles}
 We emphasize that all of the team members are supposed to put active effort on each of the milestones of the project.
@@ -393,10 +397,10 @@ However, we assign a team member to have main responsibility for each step in or
 		ID & Milestone & Chief Responsibility & Contact \\ \hline
 		1 & Project Initiation document & Bianka Bakullari & bianka.bakullari@gmail.com \\ \hline
 		2 & Requirements Specification document & xx & yy \\ \hline
-		3 & Design Analysis and dummy P.o.C. & xx & yy \\ \hline
+		3 & Design Analysis and dummy P.o.C. & Christopher Beine & christopher.beine@rwth-aachen.de \\ \hline
 		4 & Sprint 1 code and documentation & xx  & yy \\ \hline
 		5 & Sprint 2 code and documentation & Bianka Bakullari & bianka.bakullari@gmail.com \\ \hline
-		6 & Sprint 3 code and documentation & xx & yy \\ \hline
+		6 & Sprint 3 code and documentation & Christopher Beine & christopher.beine@rwth-aachen.de \\ \hline
 		7 & Testing, assessment and deployment & xx & yy \\ \hline
 		8 & Final report on the project & xx & yy \\ \hline
 	\end{tabular}
