Update Project Initiation Document.tex
Corrected spelling mistakes and updated role section

--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -125,7 +125,7 @@ Moreover, the documentation of both organizational aspects as well as software w
 In this project we will assume that an event log is given by the user, i.e., data that contains at least the attributes "id", "time stamp" and "activity name". Moreover, we will assume that these event logs are given in the standard XES format.
 Since the set of candidates for imprecise labels is given by the user, we assume that the quality of the processes applied on the refined event log also depends on the domain knowledge of the user who picks the candidate labels.
 Our algorithm is a pre-processing step in itself and it does not include other preprocessing mechanisms like filtering.
-In this context, instead of considering imprecise labels as noise and filtering the out, we change the labels based on the patterns present in the data.
+In this context, instead of considering imprecise labels as noise and filtering them out, we change the labels based on the patterns present in the data.
 
 
 
@@ -327,7 +327,7 @@ In this section we introduce the members of our team by shortly describing their
 
 \subsubsection*{Nicole Ventsch}
 
-Nicole Ventsch is a Master student at RWTH studying Mathematics and Data Science in parallel. She is studying both subjects in her second semester of the master's degree. Moreover, she works as a student assistant in the field of Data Analytics / Business Intelligence. Due to her background in mathematics, she has a good understanding of theoretical foundations. Moreover, she is very interested in Data Science and already took many courses in that area. Since she took the course "Introduction to Data Science", she has also worked with Python before. Though she has a strong theoretical background, she has never worked on user interfaces or with web services, so that this aspect of the project could be challenging for her. Additionally to that, she is not used to the software development Lifecycle, so that executing this project will include many new experiences to her. 
+Nicole Ventsch is a Master student at RWTH studying Mathematics and Data Science in parallel. She is studying both subjects in her second semester of the master's degree. Moreover, she works as a student assistant in the field of Data Analytics / Business Intelligence. Due to her background in mathematics, she has a good understanding of theoretical foundations. Moreover, she is very interested in Data Science and already took many courses in that area. Since she took the course "Introduction to Data Science", she has also worked with Python before. Though she has a strong theoretical background, she has never worked on user interfaces or with web services, so that this aspect of the project will be new to her. Additionally to that, she is not used to the software development Lifecycle, so that executing this project will include many new experiences to her. 
 
 \subsubsection*{Juan Garza}
 
@@ -358,13 +358,13 @@ However, we assign a team member to have main responsibility for each step in or
   	\hline
 		ID & Milestone & Chief Responsibility & Contact \\ \hline
 		1 & Project Initiation document & Bianka Bakullari & bianka.bakullari@gmail.com \\ \hline
-		2 & Requirements Specification document & xx & yy \\ \hline
+		2 & Requirements Specification document & Nicole Ventsch & nicole.ventsch@rwth-aachen.de \\ \hline
 		3 & Design Analysis and dummy P.o.C. & Christopher Beine & christopher.beine@rwth-aachen.de \\ \hline
-		4 & Sprint 1 code and documentation & xx  & yy \\ \hline
+		4 & Sprint 1 code and documentation & Juan Garza  & yy \\ \hline
 		5 & Sprint 2 code and documentation & Bianka Bakullari & bianka.bakullari@gmail.com \\ \hline
 		6 & Sprint 3 code and documentation & Christopher Beine & christopher.beine@rwth-aachen.de \\ \hline
-		7 & Testing, assessment and deployment & xx & yy \\ \hline
-		8 & Final report on the project & xx & yy \\ \hline
+		7 & Testing, assessment and deployment & Juan Garza & yy \\ \hline
+		8 & Final report on the project & Nicole Ventsch & nicole.ventsch@rwth-aachen.de \\ \hline
 	\end{tabular}
 \end{center}
 
