--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -360,10 +360,14 @@ However, we assign a team member to have main responsibility for each step in or
 		1 & Project Initiation document & Bianka Bakullari & bianka.bakullari@gmail.com \\ \hline
 		2 & Requirements Specification document & Nicole Ventsch & nicole.ventsch@rwth-aachen.de \\ \hline
 		3 & Design Analysis and dummy P.o.C. & Christopher Beine & christopher.beine@rwth-aachen.de \\ \hline
-		4 & Sprint 1 code and documentation & Juan Garza  & yy \\ \hline
+		4 & Sprint 1 code and documentation & Juan Garza  & 
+		juan.garza@rwth-aachen.de
+		\\ \hline
 		5 & Sprint 2 code and documentation & Bianka Bakullari & bianka.bakullari@gmail.com \\ \hline
 		6 & Sprint 3 code and documentation & Christopher Beine & christopher.beine@rwth-aachen.de \\ \hline
-		7 & Testing, assessment and deployment & Juan Garza & yy \\ \hline
+		7 & Testing, assessment and deployment & Juan Garza & 
+		juan.garza@rwth-aachen.de 
+		\\ \hline
 		8 & Final report on the project & Nicole Ventsch & nicole.ventsch@rwth-aachen.de \\ \hline
 	\end{tabular}
 \end{center}
