--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -47,7 +47,7 @@
 	\texttt{}
 	Nicole Ventsch\\
 	\texttt{}
-	Juan\\
+	Juan Garza\\
 	\texttt{}
 }
 
@@ -86,7 +86,7 @@
 \section{Overview}
 Many processes involve carrying out an action multiple times. An example for this would be an online shop in which you first have to pay a registration fee before ordering an item and paying it. This process contains the event "payment" twice, but in different contexts, so that the payments are actually two different tasks. In the context of analysing processes, the event logs usually only contain the event names, so that the "payment" actions would be treated as the same task and loops would be induced in the resulting models. However, these loops do not match the actual process, which is the issue this project addresses. 
 
-These imprecise logs should be refined based on the structural contexts of the events. We want to refine the logs without any filtering. Moreover, we want to allow an interactive change of the thresholds used to refine the labels since this can differ for every log and we have no knowledge of the correctness of the refined log in general. All of this should be done by creating a Python-based web service in this project.
+These imprecise logs should be refined based on the structural contexts of the events. We want to refine the logs without any filtering. Moreover, we want to allow an interactive change of the thresholds used to refine the labels since this can differ for every log and we have no knowledge of the correctness of the refined log in general. All of this should be done by implementing an algorithm in Python and then creating a web service through which the user can modify his event log.
 
 
 
@@ -103,7 +103,7 @@ During the project, we will create both code and documentations. Thus, the scope
 Documentation: 
 \begin{itemize}
 	\item create a Project Initiation Document 
-	\item realize the Requirements Specification document
+	\item realize the Requirements Specification Document
 	\item develop and describe the design of the interface 
 	\item design the algorithm structure by stating the usage of classes as well as the inputs and outputs for the functions that are used
 	\item Software Documentation during milestones
@@ -112,7 +112,7 @@ Documentation:
 
 Implementation:
 \begin{itemize}
-	\item set up a Web Service based on Python that uses the label refinement algorithm proposed by Xixi Lu, et al.
+	\item set up a Web Service that uses the label refinement algorithm proposed by Xixi Lu, et al in \cite{paper}.
 	\item create a user interface that allows the users to upload the original event log, set thresholds and imprecise label scope and finally download the refined event log
 \end{itemize}
 
@@ -179,10 +179,10 @@ For our project we will use following open source tools:
 	\item JavaScript as Front-end development language (Standard ECMAScript 2018)
 \end{itemize}
 
-We will seperate the application into two main parts the back-end which is responsible for the algorithm and API design and the front-end to provide a user friend interface.\\
+We will seperate the application into two main parts: the back-end, which is responsible for the algorithm and API design, and the front-end to provide a user-friendly interface.\\
 \medskip
-Python is used as back-end programming language to implement the algorithm. Additionally, we will use Flask as a lightweight webapplication framework. 
-It provides a quick start and is easily customizable via plug-ins. It is also used in enterprise applications like Netflix Lemu [?].\\
+Python is used as back-end programming language to implement the algorithm. Additionally, we will use Flask as a lightweight web-application framework. 
+It provides a quick start and is easily customizable via plug-ins. It is also used in enterprise applications like Netflix Lemu.\\
 \medskip
 In particular we will make use of the .pm4py library which is a joint effort of the Process Mining group at the Fraunhofer FIT and the Chair of
 RWTH Process and Data Science group as it supports many process mining algorithms and performance measures in Python.\\
@@ -232,21 +232,21 @@ Software components do not work as a whole & Put emphasis on the design step \\
 
 \subsection{Milestones}
 
-The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided into nine milestones. The project is managed with a scrum-oriented approach
-where each milestone represents a sprint. The project team organizes the required tasks during each sprint and visualize the current project status via a dashboard.
+The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided into eight milestones. The project is managed with a scrum-oriented approach
+where each milestone represents a sprint. The project team organizes the required tasks during each sprint and visualizes the current project status via a dashboard.
 
 \begin{center}
 	\captionof{table}{Overview Milestones }
   \begin{tabular}{ m{0.4cm} m{5cm} m{8.5cm} m{2cm} }
   	\hline
 		ID & Milestone & Description & Deadline \\ \hline
-		1 & Project Initiation document & The Project Initiation Document provides all of the key information required to start and run the project. This includes the project description, business case, feasibility study and a project team presentation.  & 19/04/2019 \\ \hline
-		2 & Requirements Specification document & The Requirements Specification document contains functional and none functional requirements such as a set of use cases to describe the system interactions. & 29/04/2019 \\ \hline
+		1 & Project Initiation document & The Project Initiation Document provides all of the key information required to start and run the project. This includes the project description, business case, feasibility study and a project team presentation.  & 22/04/2019 \\ \hline
+		2 & Requirements Specification document & The Requirements Specification document contains functional and non-functional requirements such as a set of use cases to describe the system interactions. & 29/04/2019 \\ \hline
 		3 & Design Analysis and dummy P.o.C. & The final document is a description about the planned system architectural background and a proof of concept visualizing the main UI components. & 13/05/2019 \\ \hline
 		4 & Sprint 1 code and documentation & In this sprint the import module and a static frontend will be implemented.  & 24/05/2019 \\ \hline
 		5 & Sprint 2 code and documentation & In this sprint the algorithm will be implemented. & 07/06/2019 \\ \hline
-		6 & Sprint 3 code and documentation & IN this sprint the final user interface and visualization will be implemented. & 21/06/2019 \\ \hline
-		7 & Testing, assessment and deployment & The application is checked for accuracy and should be aviable for use. & 01/07/2019 \\ \hline
+		6 & Sprint 3 code and documentation & In this sprint the final user interface and visualization will be implemented. & 21/06/2019 \\ \hline
+		7 & Testing, assessment and deployment & The application is checked for accuracy and should be available for use. & 01/07/2019 \\ \hline
 		8 & Final report on the project & The final report provides an overview about the project course and the result. & 08/07/2019 \\ \hline
 	\end{tabular}
 \end{center}
@@ -254,18 +254,18 @@ where each milestone represents a sprint. The project team organizes the require
 \includepdf[landscape=true]{ganttChart.pdf} 
 
 \subsection{Deliverables}
-With each milestones various deliverables are created to monitor, document and verify the docuemnt progress.
+With each milestone various deliverables are created to monitor, document and verify the document progress.
 \newline
 \textbf{1 Project Initiation document:}
 \\
 \begin{itemize}
-	\item Finale project initiation document with key information about the project
+	\item Final Project Initiation Document with key information about the project
 \end{itemize}
 
-\textbf{2 Requirements Specification document:}
+\textbf{2 Requirements Specification Document:}
 \\
 \begin{itemize}
-	\item Requiredments Specification document with functional und none functional requirements
+	\item Requirements Specification Document with functional und non-functional requirements
 	\item Use case analysis
 \end{itemize}
 
@@ -297,16 +297,13 @@ With each milestones various deliverables are created to monitor, document and v
 	\item Code documentation
 \end{itemize}
 
-{\color{red} @all: should we write tests during the implementation? Could possibly save us a lot of trouble, but we have to select a test framework.
-Otherwise we can remove the Unit Test protocols}
-
 \textbf{7 Testing, assessment and deployment}
 \\
 \begin{itemize}
 	\item Testprotocols
 	\item Server configuration
 	\item Web API 
-	\item Webapplication
+	\item Web-application
 \end{itemize}
 
 \textbf{8 Final report on the project}
@@ -315,9 +312,6 @@ Otherwise we can remove the Unit Test protocols}
 	\item Final report
 \end{itemize}
 
-{\color{red} @all: Any other documents, reports, protocols or code artefacts required?}
-
-\subsection{Timetable}
 
 \section{Project Team}
 In the following we focus on the individual strengths of the members of the team and specify the responsibilities with respect to the milestones of the project.
@@ -327,7 +321,7 @@ In this section we introduce the members of our team by shortly describing their
 
 \subsubsection*{Nicole Ventsch}
 
-Nicole Ventsch is a Master student at RWTH studying Mathematics and Data Science in parallel. She is studying both subjects in her second semester of the master's degree. Moreover, she works as a student assistant in the field of Data Analytics / Business Intelligence. Due to her background in mathematics, she has a good understanding of theoretical foundations. Moreover, she is very interested in Data Science and already took many courses in that area. Since she took the course "Introduction to Data Science", she has also worked with Python before. Though she has a strong theoretical background, she has never worked on user interfaces or with web services, so that this aspect of the project will be new to her. Additionally to that, she is not used to the software development Lifecycle, so that executing this project will include many new experiences to her. 
+Nicole Ventsch is a Master student at RWTH studying Mathematics and Data Science in parallel. She is studying both subjects in her second semester of the master's degree. Moreover, she works as a student assistant in the field of Data Analytics / Business Intelligence. Due to her background in mathematics, she has a good understanding of theoretical foundations. Moreover, she is very interested in Data Science and already took many courses in that area. Since she took the course "Introduction to Data Science", she has also worked with Python before. Though she has a strong theoretical background, she has never worked on user interfaces or with web services, so that this aspect of the project will be new to her. Additionally, she is not used to the software development lifecycle, so that execution this project will include many new experiences to her. 
 
 \subsubsection*{Juan Garza}
 
@@ -338,8 +332,8 @@ Juan Garza is a student at the RWTH University. He is currently in his 4th semes
 Bianka Bakullari is a Master student at RWTH studying Computer Science.
 She has a good theoretical background on the field of Process Mining after having attented the lectures "Business Process Intelligence" and "Introduction to Data Science". 
 Currently she is attending the "Advanced Process Mining" lecture.
-She has gathered some experience working with Python where in most cases pre-processing and analysis was made on concrete event data, therefore a challenge of this project is implementing an algorithm that works on any given event log efficiently.
-Since she has never worked with web applications before so the execution of this step will be a new experience for her.
+She has gathered some experience working with Python where in most cases pre-processing and analysis was made on concrete event data. Therefore, a challenge of this project is implementing an algorithm that works on any given event log efficiently.
+Since she has never worked with web applications before, the execution of this step will be a new experience for her.
 
 
 \subsubsection*{Christopher Beine}
@@ -389,7 +383,7 @@ However, we assign a team member to have main responsibility for each step in or
 In order to better be able to keep track of our progress, we use the Trello dashboard to divide our tasks into planned, running and completed ones.
 Trello also gives the opportunity to write descriptions and comments on each task, so that everyone is able to specify certain things needed to be considered or problems having arised.
 For our deliverables we use Git, as this makes it able to keep track of any changes and updates to our documentation or code.
-All members and the instructors have access to both Trello account and Git repository.
+All members and the instructors have access to both Trello account and the Git repository.
 
 %\newpage
 %\bibliographystyle{plain}
@@ -398,7 +392,7 @@ All members and the instructors have access to both Trello account and Git repos
 
 
 
-\addcontentsline{toc}{chapter}{\textbf{References}}
+%\addcontentsline{toc}{chapter}{\textbf{References}}
 \end{flushleft}
 %\bibliography{uw-ethesis}
 % Tip 5: You can create multiple .bib files to organize your references. 
