Table caption removed

--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -167,7 +167,7 @@ Since the logs have a finite set of activities leaving room for only a reduced n
 As stated in \cite{paper}, the algorithm has already been implemented in ProM, where controlled experiments have been made to test the performance of the algorithm based on event logs containing different patterns.
 There has also been a real life case study involving an event log with data concerning healthcare which was provided by Maastricht University Medical Center (MUMC+), a large academic hospital in the Netherlands.
 In the log containing 1039 cases and 6213 events, the activities \textit{surgery} and \textit{consultation} were imprecise.
-After relabeling, the resulting model reflected the behaviour which was described by the domain experts, according to whom the activity \textit{surgery} for example took place many times during the treatment of certain patients.
+After relabeling, the resulting model reflected the behaviour which was described by the domain experts, according to whom the activity \textit{surgery} for example took place many times during the treatment of certain patients.\\
 \medskip
 For our project we will use following open source tools: 
 \medskip
@@ -182,7 +182,7 @@ For our project we will use following open source tools:
 We will separate the application into two main parts: the back-end, which is responsible for the algorithm and API design, and the front-end to provide a user-friendly interface.\\
 \medskip
 Python is used as back-end programming language to implement the algorithm. Additionally, we will use Flask as a lightweight web-application framework. 
-It provides a quick start and is easily customizable via plug-ins. It is also used in enterprise applications like Netflix Lemu.\\
+It provides a quick start and is easily customizable via plug-ins. It is also used in enterprise applications like Netflix.\\
 \medskip
 In particular we will make use of the pm4py library which is a joint effort of the Process Mining group at the Fraunhofer FIT and the Chair of
 RWTH Process and Data Science group as it supports many process mining algorithms and performance measures in Python.\\
@@ -236,7 +236,6 @@ The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided i
 where each milestone represents a sprint. The project team organizes the required tasks during each sprint and visualizes the current project status via a dashboard.
 
 \begin{center}
-	\captionof{table}{Overview Milestones }
   \begin{tabular}{ m{0.4cm} m{5cm} m{8.5cm} m{2cm} }
   	\hline
 		ID & Milestone & Description & Deadline \\ \hline
@@ -254,8 +253,8 @@ where each milestone represents a sprint. The project team organizes the require
 \includepdf[landscape=true]{ganttChart.pdf} 
 
 \subsection{Deliverables}
-With each milestone various deliverables are created to monitor, document and verify the document progress.
-\newline
+With each milestone various deliverables are created to monitor, document and verify the document progress.\\
+\medskip
 \textbf{1 Project Initiation document:}
 \\
 \begin{itemize}
@@ -405,7 +404,6 @@ All members and the instructors have access to both Trello account and the Git r
 \begin{thebibliography}{5}
 \bibitem{paper}
 Lu, Xixi, et al. "Handling duplicated tasks in process discovery by refining event labels." International Conference on Business Process Management. Springer, Cham, 2016.
-
 
 
 
