Risks, User Doc & Waiting Room

--- a/Requirements Specification document.tex
+++ b/Requirements Specification document.tex
@@ -148,14 +148,55 @@
 \subsection{Migration to the New Product}
 
 \subsection{Risks}
+\newpage
+\begin{tabularx}{\textwidth}{|X|X|p{3cm}|X|}
+\hline
+\textbf{Risks} 
+&\textbf{Description}
+&\textbf{Category}
+&\textbf{Mitigation}\\
+\hline
+Inaccurate expectations. &Stakeholders develop inaccurate expectations (believe that the project will achieve something not in the requirements, plan, etc).&Stakeholder &Clearly state in the requirement documentation what are the deliverables meant to be done and the scope of the project.\\
+\hline
+Process inputs are low quality. &Inputs from stakeholders that are low quality (e.g. business case, requirements, change requests). &Stakeholder	&Kindly ask the stakeholder for a more detailed and clearer version of any input they may provide i.e., requirements, business cases.\\
+\hline
+Misunderstood requirements.	&When requirements are misinterpreted by the project team.	&Communication &Meet with the stakeholders and discuss the requirements again until the team is sure that they have completely understood them.\\ 
+\hline
+Learning curves. &Project team needs to acquire new skills for the project.	&Team	&Motivate the project team, give them the best practices on the IT field and make experts instruct them using their knowledge and own experience.\\ 
+\hline
+Integration failure. &Product components will fail to integrate with each other. &Integration	&Establish standards for product development and make sure that the individual components passed flawlessly the unit test.\\ 
+\hline
+Requirements are incomplete. &Requirements are not fully captured or are overlooked.	&Requirements	&Make a peer-review of the requirement documentation and make sure that nothing is being left out.\\ 
+\hline
+\end{tabularx}
+
+
 
 \subsection{Costs}
 
-\subsection{User Documentation and Training}
+\subsection{User Documentation}
+\begin{enumerate}
+\item Technical documentation: 
+\begin{itemize}
+  \item Software code documentation.
+  \item Technical specifications.
+\end{itemize}
+
+\item User documentation including:
+\begin{itemize}
+\item How to use the UI. 
+\item Examples of inputs and outputs.
+\item Explanation of error messages.
+\item Information to contact the developers (in case of further questions).
+\end{itemize}
+\end{enumerate}
 
 \subsection{Waiting Room}
 
-
+\begin{itemize}
+\item Additional feature which enables the user to choose a Business Process Model Discovery (BPMD) technique to visualize the resulting process model and to pick the one which is considered to be the best one (according to user’s expertise). 
+\item Additional feature that allows for the automatic detection of “imprecise labels” by using properties of the Inductive Miner (IM).
+\end{itemize}
 
 
 
