--- a/Requirements Specification document.tex
+++ b/Requirements Specification document.tex
@@ -138,10 +138,41 @@
 \section{Project Issues}
 
 \subsection{Open Issues}
+Our team has a rough idea of the steps needed to implement the algorithm and the interface.
+However, we are unsure of the relative time needed for each of these parts.
+Many unexpected bugs in our algorithm could hinder the time we have in our disposal to design a user-friendly web-interface.
+
+While we will try to achieve writing an efficient algorithm, there are no concrete performance measures required.
+Drawbacks will probably be found during implementation and decisions will have to be made on the spot.
+
+Since each of the members has to be fully aware of and actively participate in the coding process, it is still unclear how the functionalities will be divided between the group members.
+Whether or not some functionalities should be implemented together or individually depends on type and importance of functionality, personal schedules, deadlines and so on.
+
+
+
+
+
 
 \subsection{Off-the-Shelf Solutions}
+There has already been an implementation of the algorithm in ProM.
+This might be helpful in the designing steps of our algorithm.
+
+We will use a code written in Java to automatically generate events logs.
+
+\textcolor{red}{@juan: Where did you get the java code you showed us once?}
 
 \subsection{New Problems}
+The Label Refinement algorithm intends to give the user an alternative event log on which process discovery algorithms can be applied.
+Whether or not the models resulting from the new refined log have better precision or fitness compared to the original models is beyond our scope.
+Since the result also depends on the thresholds and set of candidate activities which are chosen by the user, we assume that the user has some background on Process Mining and has clear intentions for trying to work with a new refined log.
+The algorithm does not filter out events or features in the data.
+
+A common mistake the user could make is upload an event log in the .csv or .xlsx format instead of .xes format.
+
+
+
+
+
 
 \subsection{Tasks}
 
