--- a/Requirements Specification document/Requirements Specification document.tex
+++ b/Requirements Specification document/Requirements Specification document.tex
@@ -94,7 +94,7 @@
 
 \subsection{The Purpose of the Project}
 
-The purpose of the project is providing a platform that allows refinements of event logs, where actions that originally had the same label are relabelled if they have different structural behaviours. In order to do so, an interactive web service should be implemented that allows users to upload event logs in the standard XES format and set a threshold for the refinements. This event log should contain actions that are carried out multiple times and are named identically. The web service should then apply an algorithm to it that refines the log in a way that these actions are relabelled based on structural similarity. Finally, the user should be able to download the refined log.
+The purpose of the project is providing a platform that allows refinements of event logs, where actions that originally had the same label are relabelled if they have different structural behaviours. In order to do so, an interactive web service should be implemented that allows users to upload event logs in the standard XES or CSV format and set thresholds for the refinements. This event log should contain actions that are carried out multiple times and are named identically. The web service should then apply an algorithm to it that refines the log in a way that these actions are relabelled based on structural similarity. Finally, the user should be able to download the refined log in XES.
 
 The users can then use the refined log to gain insight by applying process discovery algorithms to the data. By using the refinement algorithm, higher accuracies should be reached and that way lead to a better insight into the processes.
 
@@ -116,10 +116,10 @@ The client of this project is the Chair of Process and Data Science at the RWTH 
 \subsection{The Scope of the Work}
 
 \subsection{The Scope of the Product}
-The final system consist of a web interface to upload Event logs, parameterize thresholds and to execute the refining event label algorithm. 
+The final product consists of a web interface where the user can upload event logs, parameterize thresholds and then the Refining Event Labels algorithm is executed. 
 In order to get an overview of the product, a use case analysis was carried out, where we identify the system actors and their functions. 
-Because the project focus is the refining event lable implementation, the project was divided into two systems. This allows a better visualisation 
-of the individual algorithm steps and system interactions. The following use cases were identified within the analysis.\\
+Because the project's focus is the Refining Event Labels implementation, the project was divided into two systems. 
+This allows a better visualisation of the individual algorithm steps and system interactions. The following use cases were identified within the analysis.\\
 \medskip
 \includegraphics[width=\textwidth]{"UML Files/Use Case Diagram front-end".png}
 \medskip
@@ -127,6 +127,24 @@ of the individual algorithm steps and system interactions. The following use cas
 {\color{gray} **** under construction ***}
 \medskip
 \subsection{Functional and Data Requirements}
+
+\includegraphics[scale=0.6]{Req1.png}
+
+\includegraphics[scale=0.6]{Req2.png}
+
+\includegraphics[scale=0.6]{Req3.png}
+
+\includegraphics[scale=0.6]{Req4.png}
+
+\includegraphics[scale=0.6]{Req5.png}
+
+\includegraphics[scale=0.6]{Req6.png}
+
+\includegraphics[scale=0.6]{Req7.png}
+
+
+
+
 \section{Nonfunctional Requirements}
 
 \subsection{Look and Feel Requirements}
@@ -168,7 +186,7 @@ Whether or not some functionalities should be implemented together or individual
 There has already been an implementation of the algorithm in ProM.
 This might be helpful in the designing steps of our algorithm.
 
-We will use a code written in Java to automatically generate events logs.
+We will use a code written in Java to automatically generate events logs which we will then use as small tests for our code.
 
 \textcolor{red}{@juan: Where did you get the java code you showed us once?}
 
@@ -178,7 +196,12 @@ Whether or not the models resulting from the new refined log have better precisi
 Since the result also depends on the thresholds and set of candidate activities which are chosen by the user, we assume that the user has some background on Process Mining and has clear intentions for trying to work with a new refined log.
 The algorithm does not filter out events or features in the data.
 
-A common mistake the user could make is upload an event log in the .csv or .xlsx format instead of .xes format.
+Optimally, the new models resulting from the refined event log should keep the same old labels even for the refined ones.
+This requires from the process discovery algorithm itself to compare the original event log with the refined one and then map the refined labels to their old names after having obtained the refined model.
+We consider this beyond our scope.
+Since the set of new labels to use for refinement is unspecified, our implementation will assign new endings to the original label, so that the context is still clear even with a model containing the new labels.
+
+A common mistake the user could make is upload an event log in some other format (e.g. .xlsx format) instead of XES or CSV format.
 
 
 
