--- a/Requirements Specification document/Requirements Specification document.tex
+++ b/Requirements Specification document/Requirements Specification document.tex
@@ -114,6 +114,9 @@ The client of this project is the Chair of Process and Data Science at the RWTH 
 \section{Functional Requirements}
 
 \subsection{The Scope of the Work}
+As explained in the Project Initiation document, we aim to provide a web application where the end user can apply the Label Refinement automatically as a pre-processing step to his event log.
+The new and refined log could later be used as alternative input to process discovery algorithms in other tools, yielding a new model and thus adding an alternative to the solution space of possible process models.
+
 
 \subsection{The Scope of the Product}
 The final product consists of a web interface where the user can upload event logs, parameterize thresholds and then the Refining Event Labels algorithm is executed. 
@@ -147,21 +150,23 @@ This allows a better visualisation of the individual algorithm steps and system 
 
 \section{Nonfunctional Requirements}
 
-\subsection{Look and Feel Requirements}
+\subsection{Look and Feel Requirements and Usability}
+The user interface must be self-explanatory and easy to use.
+It should be clear where the event log can be uploaded and/or downloaded.
+For each threshold, the user should be able to type in his choice and see it on the screen.
+In case that the event log has the wrong format or the chosen threshold is out of range, an error message displayed on the screen should imply what has gone wrong.
 
-\subsection{Usability and Humanity Requirements}
+Our product is aimed at users who have some knowledge in Process Mining, are familiar with the algorithm or are previously informed about the concept and effects of relabeling.
 
-\subsection{Performance Requirements}
+
+
+
+%\subsection{Performance Requirements}
 
 \subsection{Operational and Environmental Requirements}
 
 \subsection{Maintainability and Support Requirements}
 
-\subsection{Security Requirements}
-
-\subsection{Cultural and Political Requirements}
-
-\subsection{Legal Requirements}
 
 
 \section{Project Issues}
@@ -204,13 +209,9 @@ Since the set of new labels to use for refinement is unspecified, our implementa
 A common mistake the user could make is upload an event log in some other format (e.g. .xlsx format) instead of XES or CSV format.
 
 
+%\subsection{Tasks}
 
-
-
-
-\subsection{Tasks}
-
-\subsection{Migration to the New Product}
+%\subsection{Migration to the New Product}
 
 \subsection{Risks}
 \newpage
@@ -221,15 +222,15 @@ A common mistake the user could make is upload an event log in some other format
 &\textbf{Category}
 &\textbf{Mitigation}\\
 \hline
-Inaccurate expectations. &Stakeholders develop inaccurate expectations (believe that the project will achieve something not in the requirements, plan, etc.).&Stakeholder &Clearly state in the requirement documentation what are the deliverables meant to be done and the scope of the project.\\
+Inaccurate expectations. &Inaccurate expectations are developed(believe that the project will achieve something not in the requirements, plan, etc.).&Stakeholder &Look up the requirements document and consult with the client.\\
 \hline
-Process inputs are low quality. &Inputs from stakeholders that are low quality (e.g. business case, requirements, change requests). &Stakeholder	&Kindly ask the stakeholder for a more detailed and clearer version of any input they may provide i.e., requirements, business cases.\\
+Process inputs have low quality. &Inputs from stakeholders that are low quality (e.g. business case, requirements, change requests). &Stakeholder	&Kindly ask for a more detailed and clearer version of any input they may provide i.e., requirements, business cases.\\
 \hline
-Misunderstood requirements.	&When requirements are misinterpreted by the project team.	&Communication &Meet with the stakeholders and discuss the requirements again until the team is sure that they have completely understood them.\\ 
+Misunderstood requirements.	&When requirements are misinterpreted by the project team.	&Communication &Meet and discuss the requirements again until the team is sure that they have completely understood them.\\ 
 \hline
 Learning curves. &Project team needs to acquire new skills for the project.	&Team	&Motivate the project team, give them the best practices on the IT field and make experts instruct them using their knowledge and own experience.\\ 
 \hline
-Integration failure. &Product components will fail to integrate with each other. &Integration	&Establish standards for product development and make sure that the individual components passed flawlessly the unit test.\\ 
+Integration failure. &Product components will fail to integrate with each other. &Integration	&Establish standards for product development and make sure that the individual components passed the tests flawlessly.\\ 
 \hline
 Requirements are incomplete. &Requirements are not fully captured or are overlooked.	&Requirements	&Make a peer-review of the requirement documentation and make sure that nothing is being left out.\\ 
 \hline
@@ -237,7 +238,7 @@ Requirements are incomplete. &Requirements are not fully captured or are overloo
 
 
 
-\subsection{Costs}
+%\subsection{Costs}
 
 \subsection{User Documentation}
 \begin{enumerate}
@@ -257,10 +258,12 @@ Requirements are incomplete. &Requirements are not fully captured or are overloo
 \end{enumerate}
 
 \subsection{Waiting Room}
+In the following we gather some ideas on which functionalities can be added or extended in our product.
 
 \begin{itemize}
-\item Additional feature which enables the user to choose a Business Process Model Discovery (BPMD) technique to visualize the resulting process model and to pick the one which is considered to be the best one (according to user's expertise). 
+\item Additional feature which enables the user to choose a Business Process Model Discovery (BPMD) technique from another tool to visualize the resulting process model and to pick the one which is considered to be the best one (according to user's expertise). 
 \item Additional feature that allows for the automatic detection of “imprecise labels” by using properties of the Inductive Miner (IM).
+\item Additional feedback describing the changes being made to the original event log.
 \end{itemize}
 
 
