--- a/Requirements Specification document/Requirements Specification document.tex
+++ b/Requirements Specification document/Requirements Specification document.tex
@@ -100,7 +100,7 @@ The users can then use the refined log to gain insight by applying process disco
 
 \subsection{The Client, the Customer and other Stakeholders}
 
-The client of this project is the Chair of Process and Data Science at the RWTH Aachen, which provides the supervision and support for this project. Furthermore, there are many different potential users. For example, students or researchers could use the website as a preprocessing step in order to continue research with the refined log. Additionally, business analysts from companies could use it in order to get a better insight from the refined log than from the original one. Since we will provide a web service, it is easily accessible and not limited to be used by a pre-specified group of people. 
+The client of this project is the Chair of Process and Data Science at the RWTH Aachen, which provides the supervision and support for this project. Furthermore, there are many different potential users. For example, students or researchers could use the website as a preprocessing step in order to continue research with the refined log. Additionally, business analysts from companies could use it in order to get a better insight from the refined log than from the original one. Since we will provide a web service, it is easily accessible and not limited to be used by a prespecified group of people. 
 
 \section{Project Constraints}
 
@@ -115,17 +115,16 @@ The client of this project is the Chair of Process and Data Science at the RWTH 
 
 \subsection{The Scope of the Work}
 As explained in the Project Initiation document, we aim to provide a web application where the end user can apply the Label Refinement automatically as a pre-processing step to his event log.
-The new and refined log could later be used as an alternative input to process discovery algorithms in other tools, yielding a new model and thus adding an alternative to the solution space of possible process models.
+The new and refined log could later be used as alternative input to process discovery algorithms in other tools, yielding a new model and thus adding an alternative to the solution space of possible process models.
 
 
 \subsection{The Scope of the Product}
-
-The final product consists of a web interface where the user can upload event logs, parametrize thresholds and then the Label Refinement algorithm is executed. 
+The final product consists of a web interface where the user can upload event logs, parameterize thresholds and then the Label Refinement algorithm is executed. 
 In order to get an overview of the product, a use case analysis was carried out, where we identify the system actors and their functions. 
 Because the project's focus is the Label Refinement implementation, the project was divided into two systems. 
 This allows a better visualisation of the individual algorithm steps and system interactions. The following use cases were identified within the analysis.\\
 \medskip
-Figure \ref{fig:front-end} displays the Use Cases for the final web interface and thus the system interactions with the End-user.  
+Figure \ref{fig:front-end} displays the Use Cases for the final webinterface and thus the system interactions with the Enduser.  
 Figure \ref{fig:back-end} indicates the Use Cases of, which are required for the Label Refinement algorithm. So the front-end diagram refers to UI functions  
 and the back-end diagram to a more technical view.
 \begin{figure}[h!]
@@ -186,7 +185,7 @@ It should be clear where the event log can be uploaded and/or downloaded.
 For each threshold, the user should be able to type in his choice and see it on the screen.
 In case that the event log has the wrong format or the chosen threshold is out of range, an error message displayed on the screen should imply what has gone wrong.
 
-Our product is aimed at users who have some knowledge in Process Mining, are familiar with the algorithm or are previously informed about the concept and effects of relabelling.
+Our product is aimed at users who have some knowledge in Process Mining, are familiar with the algorithm or are previously informed about the concept and effects of relabeling.
 
 
 
@@ -194,12 +193,17 @@ Our product is aimed at users who have some knowledge in Process Mining, are fam
 %\subsection{Performance Requirements}
 
 \subsection{Operational and Environmental Requirements}
-
+The project must meet the following technical requirements:
+\medskip
+\begin{itemize}
+	\item Back-end must be deployable on a production-grade server.
+	\item Front-end must be deployable on production-grade server.
+	\item Front-end must support Google Chrome (Version $\geq$ 65) and Mozilla Firefox (Version $\geq$ 60).
+\end{itemize}
+\medskip
+To validate the Operational and Environmental requirements, the front-end requirements are tested in Mozilla Firefox and Google Chrome. 
 \subsection{Maintainability and Support Requirements}
-
 After finishing the project, the web service should be self-explanatory for the users. We do not intent to offer support other than documentation to the users. Moreover, the website should only include the aspects we mentioned above and is not intended to be expanded by us after this project. We do not intend maintaining the web service after finishing this project.
-
-
 \section{Project Issues}
 
 \subsection{Open Issues}
